<resources>
    <string name="app_name">FilmApp</string>
    <string name="cast">Cast</string>
    <string name="reviews">Reviews</string>
    <string name="rate_this_movie">Rate this movie:</string>
    <string name="movies">Movies</string>
    <string name="lists">Lists</string>
    <string name="filter_1">Filter 1</string>
    <string name="filter_2">filter 2</string>
    <string name="createList">createList</string>
    <string name="share">Share</string>
    <string name="submit">Submit</string>
    <string name="Delete">Delete</string>
    <string name="add_to_list">Add to list</string>
    <string name="done">Done</string>
    <string name="_1">1</string>
    <string name="remove_from_list">Remove from list</string>
</resources>