<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Filter"
        android:id="@+id/filterOption"
        android:icon="@drawable/bars_filter"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item android:id="@+id/filter1"
                android:title="@string/filter_1"
                app:showAsAction="always"/>
            <item android:id="@+id/filter2"
                android:title="@string/filter_2"
                app:showAsAction="always"/>
        </menu>
    </item>

    <item android:title="options"
        android:icon="@drawable/baseline_more_vert_24"
        android:id="@+id/options"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item android:id="@+id/share"
                android:icon="@drawable/baseline_share_24"
                android:title="@string/share"
                app:showAsAction="always"/>
            <item android:id="@+id/delete"
                android:icon="@drawable/baseline_delete_24"
                android:title="@string/Delete"
                app:showAsAction="always"/>
        </menu>
    </item>
</menu>