<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ListsActivity"
    android:background="#121212">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:titleTextColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/filmsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="@drawable/movie_lists_bg"
            android:onClick="changeActivityToMovies"

            android:text="@string/movies"
            android:textColor="#FFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/listsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/movie_lists_bg"
            android:text="@string/lists"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/buttonLayout"
        android:id="@+id/recyclerViewList"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createButton"
        android:src="@drawable/baseline_add_24"
        android:onClick="createList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/blue"
        android:layout_margin="16dp"
        android:contentDescription="@string/createList" />

    <TextView
        android:id="@+id/dialogBox"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"

        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</RelativeLayout>